made it start with unicode insteaad of images
SIGMA

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   const blackNameInput = document.getElementById("blackName");
   const winner = document.getElementById("winner");
 
-  let useUnicode = false;
+  let useUnicode = true;
 
   const pieceImages = {
     r: "rook.png", n: "knight.jpg", b: "bishop.png", q: "queen.png", k: "king.png", p: "pawn.jpg",
