added a test promotion
a test promotion for white pawns specifically. if they reach the end, they will turn into a queen. will definitely be changed later.

--- a/index.html
+++ b/index.html
@@ -247,6 +247,11 @@
         const movingPiece = fromSq.dataset.piece;
         target.innerHTML = renderPiece(movingPiece);
         target.dataset.piece = movingPiece;
+        if (row == 0) {
+          if (target.dataset.piece == "P"{
+            target.dataset.piece == "K"
+          }
+        }
         fromSq.innerHTML = `<div></div>`;
         fromSq.dataset.piece = "";
 
