previous update fix
bruh made a mistake put == instead of =

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         target.dataset.piece = movingPiece;
         if (row == 0) {
           if (target.dataset.piece == "P"{
-            target.dataset.piece == "K"
+            target.dataset.piece = "K"
           }
         }
         fromSq.innerHTML = `<div></div>`;
