--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         target.innerHTML = renderPiece(movingPiece);
         target.dataset.piece = movingPiece;
         if (row == 0) {
-          if (target.dataset.piece == "P"{
+          if (target.dataset.piece == "P") {
             target.dataset.piece = "K"
           }
         }
