new queen implemented

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   const pieceImages = {
     r: "rook.png", n: "knight.jpg", b: "bishop.png", q: "queen.png", k: "king.png", p: "pawn.jpg",
-    R: "rook_white.png", N: "knight_white.png", B: "bishop_white.png", Q: "queen_white.jpg", K: "king_white.png", P: "pawn_white.jpg"
+    R: "rook_white.png", N: "knight_white.png", B: "bishop_white.png", Q: "queen_white.png", K: "king_white.png", P: "pawn_white.jpg"
   };
 
   const pieceUnicode = {
