fixed a slight typo
pluh. i made a mistake in the promotion menu i put wanr

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div id="chessboard"></div>
 
   <div id="promotion-menu">
-    <div style="font-weight:bold; margin-bottom:10px;">choose what you wanr to promote to:</div>
+    <div style="font-weight:bold; margin-bottom:10px;">choose what you want to promote to:</div>
     <button onclick="promotePawn('q')">♕ queen</button>
     <button onclick="promotePawn('r')">♖ rook</button>
     <button onclick="promotePawn('b')">♗ bishop</button>
